--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
       <meta charset="utf-8">
       <title>BackdoorPlayground</title>
-      <link href="./resources/css/reset.css" type="style/css" rel="stylesheet">
-      <link href="./resources/css/style.css" type="style/css" rel="stylesheet">
+      <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
+      <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
       <link rel="icon" href="">
     </head>
 
@@ -13,7 +13,7 @@
         <div id="">
           <h1>Welcome to the Backdoor Playground!</h1>
           <p>To the esteemed guests guided here, please enter in the code provided in the url before the last slash (/)
-            for example: BackdoorPlayground-A1B2C3.</p>
+            for example: BackdoorPlayground-A1B2C3. Please note that keys are case-sensitive.</p>
 
           <p>To anyone else, please take your time here and enjoy!</p>
         </div>
