--- a/index.html
+++ b/index.html
@@ -10,24 +10,32 @@
 
     <body>
       <div id="main-container">
-        <div id="">
-          <h1>Welcome to the Backdoor Playground!</h1>
-          <p>To the esteemed guests guided here, please enter in the code provided in the url before the last slash (/)
-            for example: BackdoorPlayground-A1B2C3. Please note that keys are case-sensitive.</p>
+        <div id="header">
+          <img src="./resources/images/logo.png">
+          <!--<jumbotron>C.W. Productions</jumbotron>-->
 
-          <p>To anyone else, please take your time here and enjoy!</p>
         </div>
-
-        <div id="">
-          <div class="">
-            <img src="">
+        <div id="container">
+          <h1>Dear Esteemed Guests, Welcome to the Backdoor Playground!</h1>
+          <h2>Please do take your time and enjoy!~</h2>
+          <div id="explanation">
+            <p>To those provided with codes, please enter it in the url before the last slash (/)</p>
+            <p class="example">For example: .../BackdoorPlayground-A1B2C3/</p>
+            <p>Do note that keys are case-sensitive.</p>
           </div>
         </div>
 
+        <div id="content">
+          <h1 class="construction">Under Construction</h1>
+        </div>
+      </div>
+
+      <div id="content-2">
+        <h1 class="coming soon">Coming Soon</h1>
       </div>
     </body>
 
     <footer>
-      <a href=""><p>&copy;C.W.Productions</p></a>
+      <p><a href="">&copy;</a>C.W. Productions</p>
     </footer>
   </html>
