--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 
         </div>
         <div id="container">
-          <h1>Dear Esteemed Guests, Welcome to the Backdoor Playground!</h1>
-          <h2>Please do take your time and enjoy!~</h2>
-          <div id="explanation">
-            <p>To those provided with codes, please enter it in the url before the last slash (/)</p>
-            <p class="example">For example: .../BackdoorPlayground-A1B2C3/</p>
-            <p>Do note that keys are case-sensitive.</p>
+          <div class="hovertext">
+            <h1>A C.W. Production Mini-Project</h1>
+            </br>
+            <p>Try hovering over the dotted green box!</p>
+          </div>
+          <div class="hover">
+            <h1 class="padding-top">Dear Esteemed Guests, Welcome to the Backdoor Playground!</h1>
+            <h2>Please do take your time and enjoy!~</h2>
+            <div id="explanation">
+              <p>To those provided with codes, please enter it in the url before the last slash (/)</p>
+              <p class="example">For example: .../BackdoorPlayground-A1B2C3/</p>
+              <p>Do note that keys are case-sensitive.</p>
+            </div>
           </div>
         </div>
-
         <div id="content">
           <h1 class="construction">Under Construction</h1>
         </div>
