--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>BackdoorPlayground</title>
       <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
       <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-      <link rel="icon" href="">
+      <link rel="icon" href="./resources/images/icon.png">
     </head>
 
     <body>
