added link to home

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </body>
 
     <footer>
-      <p><a href="">&copy;</a>C.W. Productions</p>
+      <p><a href="https://cwpstudio.github.io/Home/">&copy;</a>C.W. Productions</p>
     </footer>
   </html>
